--- a/Templates/tags/Bsp/main.ejs
+++ b/Templates/tags/Bsp/main.ejs
@@ -1,7 +1,6 @@
 <div class="bsp">
-    <h4>Example</h4>
     <div>
-        <% children.forEach(c => { %>
+        <h4 class="bsp_declaration">Beispiel.</h4> <% children.forEach(c => { %>
             <%- c.render_self() %>
         <% }); %>	
     </div>
