--- a/Server/public/css/global_vars.css
+++ b/Server/public/css/global_vars.css
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Afacad&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&family=Silkscreen&display=swap');
 
 *{
-    --bg_color: #111;
-    --font_color: white;
-    --default_font: 'Afacad', sans-serif;
+    --bg_color: white;
+    --font_color: #111;
+    --default_font: 'Hedvig Letters Serif', serif;
+    --hightlight_color_1: #8B786D;
+    --heading_font: 'Hedvig Letters Serif', serif;
 }
