--- a/Templates/tags/Bsp/main.css
+++ b/Templates/tags/Bsp/main.css
@@ -1,3 +1,13 @@
 .bsp{
-	border: 5px solid green;
+	border-left: .2rem dotted var(--hightlight_color_1);
+	box-sizing: border-box;
+	padding: .5rem 2rem .5rem 1.2rem;
+}
+
+.bsp .bsp_declaration{
+	display: inline;
+}
+
+.bsp > div > .bsp_declaration + p{
+	display: inline;
 }
