--- a/Templates/tags/Defn/main.css
+++ b/Templates/tags/Defn/main.css
@@ -1,3 +1,13 @@
 .defn{
-	border: 5px solid purple;
+	border-left: .2rem solid var(--hightlight_color_1);
+	box-sizing: border-box;
+	padding: .5rem 2rem .5rem 1.2rem;
+}
+
+.defn .defn_declaration{
+	display: inline;
+}
+
+.defn > div > .defn_declaration + p{
+	display: inline;
 }
