--- a/Templates/tags/Defn/main.ejs
+++ b/Templates/tags/Defn/main.ejs
@@ -1,7 +1,6 @@
 <div class="defn">
-    <h4>Definition</h4>
     <div>
-        <% children.forEach(c => { %>
+        <h4 class="defn_declaration">Definition.</h4> <% children.forEach(c => { %>
             <%- c.render_self() %>
         <% }); %>	
     </div>
